# model_harness

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-push-ecr.yml  deploy-infrastructure.yml
docker/: Dockerfile
images/: .$architecture.drawio.bkp  architecture.drawio
infra/aws/prod/: backend.tf  env-setup.sh.example  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
infra/modules/alb_api/: main.tf
infra/modules/api_gateway/: main.tf  outputs.tf  variables.tf
infra/modules/ecs_api/: main.tf
infra/modules/redis/: main.tf
infra/modules/sagemaker_endpoint/: main.tf  outputs.tf  variables.tf
infra/modules/sagemaker_sync_endpoint/: main.tf  outputs.tf  variables.tf
scripts/: image_url.sh  result.json
src/: app.py  inference_handler.py  model_loader.py
