[project]
name = "ai-infrastructure-engineer-technical-test"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.11.0",
    "boto3>=1.26.137",
    "diffusers==0.35.2",
    "fastapi==0.121.2",
    "pillow==12.0.0",
    "safetensors==0.6.2",
    "torch==2.9.0",
    "transformers==4.57.1",
    "uvicorn==0.38.0",
]
